Revision history for Hash::Match

v0.2.0

        - Internal code cleanup.

        - Added support for matching undefined values.

        - Added more POD.

v0.1.1  2014-06-25

        - Added missing Changes file.

        - Fixed TODO section of the POD.

v0.1.0  2014-06-25

        - First release on CPAN.