@@ -47,6 +47,7 @@ METHODS
     For an array reference, at least one key must exist and match the
     criteria specified in the rules.
 
+    Boolean Operators
     The following special keys allow you to use nested boolean operators:
 
     `-not'
@@ -56,12 +57,27 @@ METHODS
 
         Negate the `$subrules'.
 
+        If `$subrules' is a hash reference, that it is true when not all of
+        the rules match.
+
+        If `$subrules' is an array reference, then it is true when none of
+        the rules match.
+
     `-and'
           [
             -and => \%subrules,
           ]
 
         True if all of the `%subrules' are true.
+
+        You can also use
+
+          {
+            -and => \@subrules,
+          }
+
+        which is useful for cases where the keys of `@subrules' are not
+        strings, e.g. regular expressions.
 
     `-or'
           {
