@@ -77,6 +77,8 @@ match the criteria specified by the rules' values.
 For an array reference, at least one key must exist and match the
 criteria specified in the rules.
 
+=head4 Boolean Operators
+
 The following special keys allow you to use nested boolean operators:
 
 =over
@@ -103,6 +105,15 @@ the rules match.
 
 True if all of the C<%subrules> are true.
 
+You can also use
+
+  {
+    -and => \@subrules,
+  }
+
+which is useful for cases where the keys of C<@subrules> are not
+strings, e.g. regular expressions.
+
 =item C<-or>
 
   {
@@ -113,13 +124,42 @@ True if at least one of the C<@subrules> is true.
 
 =back
 
+=head4 Regular Expressions for Keys
+
+You can use regular expressions for matching keys. For example,
+
+  -or => [
+    qr/xyz/ => $rule,
+  ]
+
+will match if there is any key that matches the regular expression has
+a corresponding value which matches the C<$rule>.
+
+You can also use
+
+  -and => [
+    qr/xyz/ => $rule,
+  ]
+
+to match if all keys that match the regular expression have
+corresponding values which match the C<$rule>.
+
 =cut
 
 sub new {
     my ($class, %args) = @_;
 
-    my $self = _compile_match( '-root' => $args{rules}, $class );
-    bless $self, $class;
+    if (my $rules = $args{rules}) {
+
+        my $root = ((ref $rules) eq 'HASH') ? '-and' : '-or';
+        my $self = _compile_match( $root => $args{rules}, $class );
+        bless $self, $class;
+
+    } else {
+
+        croak "Missing 'rules' attribute";
+
+    }
 }
 
 sub _compile_match {
@@ -129,7 +169,15 @@ sub _compile_match {
 
         if ( $key_ref eq 'Regexp' ) {
 
+            my $n  = ($ctx eq 'HASH') ? 'all' : 'any';
+            my $fn = List::MoreUtils->can($n);
 
+            return sub {
+                my $hash = $_[0];
+                my @codes = map { _compile_match( $_, $value, $ctx ) }
+                            grep { $key_ref } (keys %{$hash});
+                $fn->( sub { $_->($hash) }, @codes );
+            };
 
         } else {
 
@@ -151,7 +199,7 @@ sub _compile_match {
             my @codes = map { _compile_match( $_, $value->{$_}, $match_ref ) }
                 ( keys %{$value} );
 
-            my $n  = ($key eq '-not') ? 'notall' : 'all';
+            my $n  = ($key eq '-not') ? 'notall' : ($key eq '-or') ? 'any' : 'all';
             my $fn = List::MoreUtils->can($n);
 
             return sub {
@@ -162,12 +210,13 @@ sub _compile_match {
         } elsif ( $match_ref eq 'ARRAY' ) {
 
             my @codes;
+            my $ref = ($key eq '-and') ? 'HASH' : $match_ref;
             my $it = natatime 2, @{$value};
             while ( my ( $k, $v ) = $it->() ) {
-                push @codes, _compile_match( $k, $v, $match_ref );
+                push @codes, _compile_match( $k, $v, $ref );
             }
 
-            my $n  = ($key eq '-not') ? 'none' : 'any';
+            my $n  = ($key eq '-not') ? 'none' : ($key eq '-and') ? 'all' : 'any';
             my $fn = List::MoreUtils->can($n);
 
             return sub {
