@@ -66,6 +66,17 @@ use_ok('Hash::Match');
 }
 
 {
+    my $m = Hash::Match->new( rules => { -or => { k => '1', j => qr/\d/, } } );
+    isa_ok($m, 'Hash::Match');
+
+    ok $m->( { k => 1 } ), 'match';
+    ok !$m->( { k => 2 } ), 'fail';
+    ok $m->( { j => 1 } ), 'match';
+    ok $m->( { k => 1, j => 3 } ),  'match';
+}
+
+
+{
     my $m = Hash::Match->new( rules => {
         k => '1', -or => [ j => qr/\d/, i => qr/x/, ], } );
     isa_ok($m, 'Hash::Match');
@@ -81,6 +92,17 @@ use_ok('Hash::Match');
 {
     my $m = Hash::Match->new( rules => [
         k => '1', -and => { j => qr/\d/, } ] );
+    isa_ok($m, 'Hash::Match');
+
+    ok $m->( { k => 1 } ), 'match';
+    ok !$m->( { k => 2 } ), 'fail';
+    ok $m->( { j => 1 } ), 'match';
+    ok $m->( { k => 1, j => 3 } ),  'match';
+}
+
+{
+    my $m = Hash::Match->new( rules => [
+        k => '1', -and => [ j => qr/\d/, ] ] );
     isa_ok($m, 'Hash::Match');
 
     ok $m->( { k => 1 } ), 'match';
@@ -117,6 +139,31 @@ use_ok('Hash::Match');
 
     ok $m->( { k => 1, j => undef } ),  'match';
     ok !$m->( { k => 1 } ), 'fail';
+}
+
+{
+    my $m = Hash::Match->new( rules => [ qr/^k/ => 1, ] );
+    isa_ok($m, 'Hash::Match');
+
+    ok $m->( { k_a => 1, k_b => 2 } ),  'match';
+    ok !$m->( { k_a => 3, k_b => 2 } ), 'fail';
+}
+
+{
+    my $m = Hash::Match->new( rules => { -or => [ qr/^k/ => 1, ] } );
+    isa_ok($m, 'Hash::Match');
+
+    ok $m->( { k_a => 1, k_b => 2 } ),  'match';
+    ok !$m->( { k_a => 3, k_b => 2 } ), 'fail';
+}
+
+{
+    my $m = Hash::Match->new( rules => { -and => [ qr/^k/ => 1, ] } );
+    isa_ok($m, 'Hash::Match');
+
+    ok $m->( { k_a => 1, k_b => 1 } ),  'match';
+    ok !$m->( { k_a => 1, k_b => 2 } ), 'fail';
+    ok !$m->( { k_a => 3, k_b => 2 } ), 'fail';
 }
 
 done_testing;
